--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "ng-face-detection",
   "main": "index.js",
   "scripts": {
+    "dev": "rollup --watch --config rollup.config.dev.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -20,6 +21,15 @@
     "tracking": "^1.1.3"
   },
   "devDependencies": {
-    "angular": "^1.7.5"
+    "angular": "^1.7.5",
+    "rollup": "^0.66.6",
+    "rollup-plugin-commonjs": "^9.2.0",
+    "rollup-plugin-copy": "^0.2.3",
+    "rollup-plugin-external-globals": "^0.2.1",
+    "rollup-plugin-generate-html-template": "^1.1.0",
+    "rollup-plugin-html": "^0.2.1",
+    "rollup-plugin-livereload": "^0.6.0",
+    "rollup-plugin-node-resolve": "^3.4.0",
+    "rollup-plugin-serve": "^0.6.0"
   }
 }
